Fix label alignment for Size

--- a/app/assets/stylesheets/editor-3/_forms.scss
+++ b/app/assets/stylesheets/editor-3/_forms.scss
@@ -12,7 +12,6 @@
 }
 
 .Editor-formInner.Editor-formInner--NoTabs {
-  align-items: center;
   margin-top: $baseSize;
   padding: 0;
 
@@ -28,6 +27,10 @@
 .Editor-formInner.Editor-formInner--Size {
   align-items: baseline;
   padding-top: $baseSize;
+}
+
+.Editor-formInner.Editor-formInner--Size.Editor-formInner--NoTabs {
+  align-items: center;
 }
 
 .Editor-formInner.Editor-formInner--FillColor {
